<resources>
    <string name="app_name">Lotro</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="communicate">communicate</string>

    <string name="action_settings">Settings</string>

    <string name="guides">Guides</string>
    <string name="classes">Classes</string>
    <string name="others">Others</string>
    <string name="about">About</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="author">Frozen Cloud</string>
    <string name="email" translatable="false">sishuiliunian321@gmail.com</string>

    <string name="beorning">Beorning</string>
    <string name="burglar">Burglar</string>
    <string name="captain">Captain</string>
    <string name="champion">Champion</string>
    <string name="guardian">Guardian</string>
    <string name="hunter">Hunter</string>
    <string name="lore_master">Lore-master</string>
    <string name="minstrel">Minstrel</string>
    <string name="runekeeper">Rune-keeper</string>
    <string name="warden">Warden</string>

</resources>
