<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_classes"
            android:title="@string/classes" />
        <item
            android:id="@+id/nav_guides"
            android:title="@string/guides" />
        <item
            android:id="@+id/nav_others"
            android:title="@string/others" />
        <item
            android:id="@+id/nav_about"
            android:title="@string/about" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/send" />
        </menu>
    </item>

</menu>
